<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/file_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/file_name" />
    <EditText
        android:id="@+id/file_data_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/file_input_data" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"/>

        <Button
            android:id="@+id/read_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_button" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button" />
    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"/>

    <TextView
        android:id="@+id/file_read_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/file_data"/>


</LinearLayout>